APIGEN-579: Clean up PMD warnings in tests
Cleaned up PMD warnings in test code.

Disabled "UseConcurrentHashMap" rule because it recommends using the
ConcurrentHashMap whenever possible. We are OK with regular HashMaps in
our code.

Disabled "UseLocaleWithCaseConversions" rule because both input and
output for the Transpiler is in a subset of English, so we don't care
about locales.

Disabled "JUnit4TestShouldUseTestAnnotation" because it gives false
positives for parameterized tests, and is not a very useful rule all by
itself anyway.

Updated PMD violations thresholds accordingly.

Change-Id: I2211d097636ff3e0f96a436f27a120afe6bc240f